# eip-2780-repricing

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude/: implementation_plan.md
configs/: benchmarkoor.yaml
data/: results.json
data/runs/: 20260529T234448Z_a11611f320a39015.json  20260531T090116Z_a11611f320a39015.json  20260601T052018Z_a11611f320a39015.json  20260601T230017Z_a11611f320a39015.json  20260602T073811Z_a11611f320a39015.json  20260602T112640Z_a11611f320a39015.json  20260602T234049Z_a11611f320a39015.json  20260603T050047Z_a11611f320a39015.json  20260603T123141Z_a11611f320a39015.json  20260603T235618Z_a11611f320a39015.json  20260607T235606Z_a11611f320a39015.json  (+6 more)
docs/: charts.js  data-20260529T234448Z_a11611f320a39015.js  data-20260601T230017Z_a11611f320a39015.js  data-20260602T112640Z_a11611f320a39015.js  data-20260602T234049Z_a11611f320a39015.js  data-20260603T235618Z_a11611f320a39015.js  data-20260607T235606Z_a11611f320a39015.js  data.js  index.html  methodology.html  run-20260529T234448Z_a11611f320a39015.html  run-20260601T230017Z_a11611f320a39015.html  run-20260602T112640Z_a11611f320a39015.html  run-20260602T234049Z_a11611f320a39015.html  run-20260603T123141Z_a11611f320a39015.html  run-20260603T235618Z_a11611f320a39015.html  run-20260607T235606Z_a11611f320a39015.html  run-20260610T012820Z_d88b18464da7445e.html  run-20260615T034251Z_d88b18464da7445e.html  run-20260623T085946Z_d88b18464da7445e.html  style.css  trends.html  trends.js
scripts/: analysis.py  build_site.py  clean_run.py
site/: data.js  index.html  methodology.html
(+7 files in other folders)
